fix: new structure for exploring data structures