@@ -7,7 +7,7 @@ plugins {
 
 group = "org.guardiandevelopment"
 version = "${property('org.guardiandevelopment.yak.version')}"
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_17
 
 java {
     withSourcesJar()
@@ -20,21 +20,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.agrona:agrona:1.9.0'
-    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation platform("org.apache.logging.log4j:log4j-bom:${log4jVersion}")
+    implementation "org.apache.logging.log4j:log4j-api"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation "org.apache.logging.log4j:log4j-core"
+    testImplementation "org.apache.logging.log4j:log4j-slf4j2-impl"
 
-    testRuntime 'org.apache.logging.log4j:log4j-api:2.11.1'
-    testRuntime 'org.apache.logging.log4j:log4j-core:2.11.1'
-    testRuntime 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.1'
-
-    testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
-    testImplementation 'org.mockito:mockito-core:3.9.0'
-    testImplementation 'org.awaitility:awaitility:4.0.3'
+    testImplementation platform("org.junit:junit-bom:${junitVersion}")
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.junit.jupiter:junit-jupiter-params"
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
+    testImplementation "org.assertj:assertj-core:${assertJVersion}"
+    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
 }
 
 jacocoTestReport {
@@ -59,7 +58,6 @@ jacocoTestCoverageVerification {
 }
 
 checkstyle {
-    toolVersion = "8.41"
     configDirectory = file("${rootProject.rootDir}/config/checkstyle")
     maxErrors = 0
     maxWarnings = 0
@@ -83,6 +81,18 @@ test {
     testLogging {
         events "failed", "passed"
     }
+
+    systemProperty "junit.jupiter.execution.parallel.enabled", "true"
+    systemProperty "junit.jupiter.execution.parallel.mode.default", "same_thread"
+    systemProperty "junit.jupiter.execution.parallel.mode.classes.default", "concurrent"
+
+    jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.util.zip=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.management/sun.management=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED')
+    jvmArgs('--add-modules', 'java.se')
 }
 
 check.dependsOn jacocoTestReport
